DEV-311: Migrated to Java 21. Fixed code to receive multiple R files and store them in one Word document. Fixed tests.